welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:13: error: illegal start of simple expression
 }
 ^SlugSnail:15: error: 'while' expected but '}' found.
}
^SlugSnail:19: error: ':' expected but ')' found.
def isFacingTrail(color):Boolean = {
                       ^SlugSnail:36: error: identifier expected but '}' found.
}
^